# nequip-C-fortran-interface

./: .gitignore  README.md  install_interface.sh  requirements.txt
nequip_interface/: CMakeLists.txt  c_wrapper.cpp  c_wrapper.h  call_nequip_interface.c  fortran_call.f90  nequip.cpp  nequip.h  nequip_wrapper.cpp  wrap_nequip.f90
neural_net/: .edges.dat.swp  CMakeLists.txt  CMakeLists_c_fort.txt  OldCMakeLists.txt  c_wrapper.cpp  c_wrapper.h  call_nequip.c  call_nequip_interface.c  fortran_call.f90  load_nequip.cpp  neighborlists.f90  nequip.cpp  nequip.h  nequip_wrapper.cpp  nequip_wrapper.f90  nequip_wrapper.h  neural_net.cpp  neural_net.py  neural_net_load.cpp  neural_net_submod.cpp  out  pair_nequip.cpp  pair_nequip.h  water-deploy.pth  wrap_nequip.f90
